# spatiotemporal-analysis

./: .gitignore  README.md  REVIEW-REPORT.md  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.changeset/: big-sides-listen.md  deep-plums-relate.md  deterministic-output.md  fix-ranking-order.md  numeric-metadata-as-string.md  remove-pseudo-count.md  sunny-hairs-mate.md  ui-polish-and-rename.md
block/: CHANGELOG.md  package.json
docs/: description.md
model/src/: index.ts
software/: CHANGELOG.md  OPTIMIZATION_PLAN.md  SPEC_GAPS_PLAN.md  TESTING_PLAN.md  package.json  pyproject.toml
software/src/: compartment_analysis.py
software/tests/: conftest.py  test_compartment_analysis.py  test_end_to_end.py  test_grouping_modes.py  test_normalization.py  test_preprocessing.py  test_restriction_index.py  test_subject_prevalence.py  test_temporal_metrics.py  test_visualization_data.py
test/src/: wf.test.ts
ui/src/: app.ts
ui/src/pages/: HeatmapPage.vue  MainPage.vue  PrevalenceHistogramPage.vue  TemporalLinePage.vue
workflow/: CHANGELOG.md  package.json
workflow/src/: main.tpl.tengo
